fixed overflow bug again

--- a/src/style/addrecipes.scss
+++ b/src/style/addrecipes.scss
@@ -9,6 +9,7 @@
     background-image: url('../../static/assets/images/prepared-image.jpeg');
     background-repeat: no-repeat;
     background-size: cover;
+    overflow: hidden;
 
     
    
